style(Button): prevent button text from wrapping

--- a/src/components/Shared/Button/Button.module.scss
+++ b/src/components/Shared/Button/Button.module.scss
@@ -7,6 +7,7 @@
   padding: 8px 16px;
   border-radius: 8px;
   font-size: .75rem;
+  text-wrap: nowrap;
   transition: background .2s ease, border-color .2s ease;
 
   &:hover {
